--- a/ritesh_cv_Jun2724.tex
+++ b/ritesh_cv_Jun2724.tex
@@ -200,7 +200,7 @@ hole gravitational wave signals}\\
     \resumeSubHeadingListStart
 
     \resumeItem{\normalfont TA for PHY204, Elementary Physics II (Fall 2023), with Dr. Rob Coyne\\
-    Assisted students with their homework assignments and prepared them for exams by providing guidance and support to enhance there  of the subject matter.}
+    Assisted students with their homework assignments and prepared them for exams by providing guidance and support to enhance their subject matter.}
     
     \resumeItem{\normalfont TA for AST 108 and AST118H (Spring 2022) with Prof. Douglas Gobeille.}
     
