--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -367,6 +367,7 @@
 \end{twocolentry}
 
 \vspace{0.2 cm}
+
 \begin{twocolentry}{July 2019 - January 2022}{\textbf{X-ray analysic of accerating pulsars}}
     \begin{highlights}
         \item Studied the process of X-ray emission of HMXBs, particularly Cen X-3
@@ -375,80 +376,62 @@
     \end{highlights}
 \end{twocolentry}
 
-% ---------- Experience ----------    
-\section{Experience}
-\begin{twocolentry}{    
-    June 2005 – Aug 2007
-}
-    \textbf{Apple}, Software Engineer
-    \begin{highlights}
-        \item Reduced time to render user buddy lists by 75\% by implementing a prediction algorithm
-        \item Integrated iChat with Spotlight Search by creating a tool to extract metadata from saved chat transcripts and provide metadata to a system-wide search database
-        \item Redesigned chat file format and implemented backward compatibility for search
-    \end{highlights}
-\end{twocolentry}
+% ---------- Teaching Experience ----------
+\section{Teaching Experience}
+\begin{onecolentry}
+    \begin{highlightsforbulletentries}
+      \item TA for PHY204, Elementary Physics II (Fall 2023), with Dr. Rob Coyne
+      \begin{itemize}
+        \item Assisted students with homework assignments and exam preparation by providing guidance and support to strengthen their understanding of the subject matter
+      \end{itemize}
+
+      \item TA for AST 108 and AST118H (Fall 2021 - Spring 2022) with Prof. Douglas Gobeille
+      \begin{itemize}
+        \item Led various doubt-clearing sessions to enhance students' understanding of the course material
+        \item Organized observation sessions to guide students in identifying celestial objects, including planets, stars, and constellations
+        \item Conducted telescopic observations of solar phenomena, such as sunspots and solar flares
+      \end{itemize}   
+    \end{highlightsforbulletentries}
+\end{onecolentry}
 
 
-\vspace{0.2 cm}
-
-\begin{twocolentry}{
-    June 2003 – Aug 2003
-}
-    \textbf{Microsoft}, Software Engineer Intern
-    \begin{highlights}
-        \item Designed a UI for the VS open file switcher (Ctrl-Tab) and extended it to tool windows
-        \item Created a service to provide gradient across VS and VS add-ins, optimizing its performance via caching
-        \item Built an app to compute the similarity of all methods in a codebase, reducing the time from $\mathcal{O}(n^2)$ to $\mathcal{O}(n \log n)$
-        \item Created a test case generation tool that creates random XML docs from XML Schema
-        \item Automated the extraction and processing of large datasets from legacy systems using SQL and Perl scripts
-    \end{highlights}
-\end{twocolentry}
+% ---------- Talks and Conferences ----------
+\section{Talks and Conferences}    
+    \begin{twocolentry}{
+        \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
+    }
+        \textbf{Multi-User Drawing Tool}
+        \begin{highlights}
+            \item Developed an electronic classroom where multiple users can simultaneously view and draw on a "chalkboard" with each person's edits synchronized
+            \item Tools Used: C++, MFC
+        \end{highlights}
+    \end{twocolentry}
 
 
+    \vspace{0.2 cm}
+
+    \begin{twocolentry}{
+        \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
+    }
+        \textbf{Synchronized Desktop Calendar}
+        \begin{highlights}
+            \item Developed a desktop calendar with globally shared and synchronized calendars, allowing users to schedule meetings with other users
+            \item Tools Used: C\#, .NET, SQL, XML
+        \end{highlights}
+    \end{twocolentry}
 
 
+    \vspace{0.2 cm}
 
-    
-    \section{Projects}
-
-
-
-        
-        \begin{twocolentry}{
-            \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
-        }
-            \textbf{Multi-User Drawing Tool}
-            \begin{highlights}
-                \item Developed an electronic classroom where multiple users can simultaneously view and draw on a "chalkboard" with each person's edits synchronized
-                \item Tools Used: C++, MFC
-            \end{highlights}
-        \end{twocolentry}
-
-
-        \vspace{0.2 cm}
-
-        \begin{twocolentry}{
-            \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
-        }
-            \textbf{Synchronized Desktop Calendar}
-            \begin{highlights}
-                \item Developed a desktop calendar with globally shared and synchronized calendars, allowing users to schedule meetings with other users
-                \item Tools Used: C\#, .NET, SQL, XML
-            \end{highlights}
-        \end{twocolentry}
-
-
-        \vspace{0.2 cm}
-
-        \begin{twocolentry}{
-            2002
-        }
-            \textbf{Custom Operating System}
-            \begin{highlights}
-                \item Built a UNIX-style OS with a scheduler, file system, text editor, and calculator
-                \item Tools Used: C
-            \end{highlights}
-        \end{twocolentry}
+    \begin{twocolentry}{
+        2002
+    }
+        \textbf{Custom Operating System}
+        \begin{highlights}
+            \item Built a UNIX-style OS with a scheduler, file system, text editor, and calculator
+            \item Tools Used: C
+        \end{highlights}
+    \end{twocolentry}
 
 
 
