Added the conferences

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -245,34 +245,34 @@
 
 % ---------- Education ----------
 \section{Education}
-  \begin{threecolentry}{\textbf{Ph.D.,}}{
+  \begin{threecolentry}{\textbf{Ph.D.}}{
     September 2021 - Present
   }
     University of Rhode Island, Kingston, RI, USA
     \begin{highlights}
-      \item CPI: 3.99/4.0
+      % \item CPI: 3.99/4.0
       \item Advisor: Dr. Gaurav Khanna
     \end{highlights}
   \end{threecolentry}
 
-\begin{threecolentry}{\textbf{M.Sc. Physics,}}{
+\begin{threecolentry}{\textbf{M.Sc. Physics}}{
     July 2018 - June, 2020
   }
     Indian Institute of Technology Bombay, Mumbai, India
   \begin{highlights}
-    \item CPI: 9.17/10
+    % \item CPI: 9.17/10
     \item Advisor: Dr. Varun Bhalerao
     \item Thesis: Phase resolved analysis of Centaurus X-3
   \end{highlights}
 \end{threecolentry} 
 
-\begin{threecolentry}{\textbf{B.Sc. Physics,}}{
+\begin{threecolentry}{\textbf{B.Sc. Physics}}{
   July 2014 - April 2017
 }
   Scottish Church College, Kolkata, India
-  \begin{highlights}
-      \item \textbf{Coursework:} Classical Mechanics, Quantum Mechanics, Electrodynamics, Statistical Mechanics, Thermodynamics, Mathematical Physics, Electronics, and Optics
-  \end{highlights}
+  % \begin{highlights}
+  %     \item \textbf{Coursework:} Classical Mechanics, Quantum Mechanics, Electrodynamics, Statistical Mechanics, Thermodynamics, Mathematical Physics, Electronics, and Optics
+  % \end{highlights}
 \end{threecolentry}
 
 
@@ -282,11 +282,11 @@
   \begin{highlightsforbulletentries}
     \item \textbf{Dean's Fellowship}, University of Rhode Island
 
-    \item NASA travel grant of \$1500 for attending the 15th LISA Symposium, Dublin, Ireland, 2024.
+    \item NASA travel grant of \$1500 for attending the 15th LISA Symposium, Dublin, Ireland in 2024.
 
     \item \textbf{Bhavesh Gandhi Memorial Prize}(2019-20), IIT Bombay, for best M.Sc. thesis.
 
-    \item Qualified \textbf{CSIR NET} June 2019 with \textbf{AIR 66} and eligible for Junior Research Fellowship.
+    \item Qualified \textbf{CSIR NET} June 2019 with All India Rank~\textbf{(AIR) 66} and eligible for Junior Research Fellowship.
   \end{highlightsforbulletentries}
 \end{onecolentry}
 
@@ -397,59 +397,46 @@
 
 % ---------- Talks and Conferences ----------
 \section{Talks and Conferences}    
-    \begin{twocolentry}{
-        \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
-    }
-        \textbf{Multi-User Drawing Tool}
-        \begin{highlights}
-            \item Developed an electronic classroom where multiple users can simultaneously view and draw on a "chalkboard" with each person's edits synchronized
-            \item Tools Used: C++, MFC
-        \end{highlights}
+\begin{highlightsforbulletentries}
+    \item \begin{twocolentry}
+        {November 2024}{University of Glasgow, Student Seminar, Online}
+        \\\textit{Incorporating Waveform Uncertainties in Effective-One-Body Models for Accurate Gravitational Wave Parameter Estimation}
     \end{twocolentry}
 
+    \item 
+    \begin{twocolentry}{April 2024}{American Physical Society (APS) April Meeting}
+        \\\textit{Gravitational wave inference with marginalization over waveform uncertainty}
+    \end{twocolentry}
+
+    \item \begin{twocolentry}
+        {January 2024}{InterDisciplinary made EAsy (IDEA), Brown University}
+        \\\textit{Gravitational waveform models for intermediate mass ratio binary black hole systems: Extending the reach of black hole perturbation theory with numerical relativity}
+    \end{twocolentry}
+
+    \item 
+    \begin{twocolentry}{June 2023}{23rd Eastern Gravity Meeting}
+        \\\textit{Building surrogate model of spinning binary black hole coalescence using perturbation theory waveforms}
+    \end{twocolentry}
+
+    \item 
+    \begin{twocolentry}{April 2023}{American Physical Society (APS) April Meeting}
+      \\\textit{Surrogate model for gravitational waveforms from spinning binary black hole coalescence using perturbation theory}
+    \end{twocolentry}
+\end{highlightsforbulletentries}
+
+
+% ---------- Programming Skills ----------
+\section{Programming Skills}
+
+    \begin{onecolentry}
+        \textbf{Programming:} Python(NumPy, SciPy, SymPy, AstroPy and Pandas), C, Fortran
+    \end{onecolentry}
 
     \vspace{0.2 cm}
 
-    \begin{twocolentry}{
-        \href{https://github.com/sinaatalay/rendercv}{github.com/name/repo}
-    }
-        \textbf{Synchronized Desktop Calendar}
-        \begin{highlights}
-            \item Developed a desktop calendar with globally shared and synchronized calendars, allowing users to schedule meetings with other users
-            \item Tools Used: C\#, .NET, SQL, XML
-        \end{highlights}
-    \end{twocolentry}
-
-
-    \vspace{0.2 cm}
-
-    \begin{twocolentry}{
-        2002
-    }
-        \textbf{Custom Operating System}
-        \begin{highlights}
-            \item Built a UNIX-style OS with a scheduler, file system, text editor, and calculator
-            \item Tools Used: C
-        \end{highlights}
-    \end{twocolentry}
-
-
-
-    
-    \section{Technologies}
-
-
-
-        
-        \begin{onecolentry}
-            \textbf{Languages:} C++, C, Java, Objective-C, C\#, SQL, JavaScript
-        \end{onecolentry}
-
-        \vspace{0.2 cm}
-
-        \begin{onecolentry}
-            \textbf{Technologies:} .NET, Microsoft SQL Server, XCode, Interface Builder
-        \end{onecolentry}
+    \begin{onecolentry}
+        \textbf{Software:} Matlab, Mathematica, HEASOFT, XSPEC, and LaTe
+    \end{onecolentry}
 
 
     
