Update paper link

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -313,8 +313,8 @@
 
     \item \publication{Gravitational wave surrogate model for spinning, intermediate mass ratio binaries based on perturbation theory and numerical relativity}
           {Katie Rink, \textbf{Ritesh Bachhar}, Tousif Islam \textit{et al.}}
-          {arXiv:2407.18319, July 2024}
-          {https://arxiv.org/abs/2407.18319}
+          {PRD 110,124069}
+          {https://journals.aps.org/prd/abstract/10.1103/PhysRevD.110.124069}
 
     \begin{samepage}        
     \item \publication{Binary Black Hole Coalescence Phenomenology from Numerical Relativity}
