Fixed typos and updated awards section

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -126,7 +126,7 @@
 \newenvironment{twocolentry}[2][]{
     \onecolentry
     \def\secondColumn{#2}
-    \setcolumnwidth{\fill, 4.5 cm}
+    \setcolumnwidth{\fill, 3.5 cm}
     \begin{paracol}{2}
 }{
     \switchcolumn \raggedleft \secondColumn
@@ -280,13 +280,13 @@
 \section{Awards} 
 \begin{onecolentry}
   \begin{highlightsforbulletentries}
-    \item \textbf{Dean's Fellowship}, University of Rhode Island
+    \item \textbf{Dean's Fellowship}, University of Rhode Island -– Recognized for outstanding academic achievement and scholarly potential.
 
-    \item NASA travel grant of \$1500 for attending the 15th LISA Symposium, Dublin, Ireland in 2024.
+    \item \textbf{NASA Travel Grant} (\$1500) –- Funded travel to the 15th LISA Symposium, Dublin, Ireland (2024) for presenting research on gravitational wave modeling.
 
-    \item \textbf{Bhavesh Gandhi Memorial Prize}(2019-20), IIT Bombay, for best M.Sc. thesis.
+    \item \textbf{Bhavesh Gandhi Memorial Prize} (2019-20), IIT Bombay -– Best M.Sc. thesis award for research on \textit{Phase-resolved analysis of Centaurus X-3}.
 
-    \item Qualified \textbf{CSIR NET} June 2019 with All India Rank~\textbf{(AIR) 66} and eligible for Junior Research Fellowship.
+    \item \textbf{CSIR NET} (June 2019) -– Achieved All India Rank \textbf{66}, qualifying for Junior Research Fellowship (JRF) in Physical Sciences.
   \end{highlightsforbulletentries}
 \end{onecolentry}
 
@@ -342,16 +342,16 @@
         \item Studied point-particle black hole perturbation theory
         \item Developing reduced-order surrogate models for gravitational waves from binary black holes
         \item Combining numerical relativity and perturbation theory to model the gravitational waveforms of spinning black holes
-        \item Modeling the gravitational waveforms of intermediate mass ratio inspirals
+        \item Modeling the gravitational waveforms of intermediate mass ratio inspirals (IMRIs)
     \end{highlights}
 \end{twocolentry}
 
 \vspace{0.2 cm}
 
-\begin{twocolentry}{July 2023 - Present}{\textbf{Systematics in gravitation wave modeling}}
+\begin{twocolentry}{July 2023 - Present}{\textbf{Systematics in gravitational wave modeling}}
     \begin{highlights}
-        \item Studied the impact of waveform calibration errors on gravitational wave parameter estimation in the context of \texttt{SEOBNRv4}
-        \item Incorporated the waveform calibration error in the gravitation wave modeling
+        \item Studied the impact of waveform calibration errors on gravitational wave parameter estimation
+        \item Incorporated the waveform calibration error in the gravitational wave modeling in the context of \texttt{SEOBNRv4}, a class of effective-one-body models
         \item Performed parameter estimation studies on simulated data to quantify the impact of waveform calibration errors
     \end{highlights}
 \end{twocolentry}
@@ -368,9 +368,9 @@
 
 \vspace{0.2 cm}
 
-\begin{twocolentry}{July 2019 - January 2022}{\textbf{X-ray analysic of accerating pulsars}}
+\begin{twocolentry}{July 2019 - January 2022}{\textbf{Timing and spectral analysic of X-ray pulsar: Centaurus X-3}}
     \begin{highlights}
-        \item Studied the process of X-ray emission of HMXBs, particularly Cen X-3
+        \item Studied the process of X-ray emission of HMXBs, particularly for Cen X-3
         \item Analyzed the phase resolved X-ray spectra of Cen X-3 using AstroSat data
         \item Observed Quasi-periodic oscillations in the X-ray light curves of Cen X-3
     \end{highlights}
@@ -394,6 +394,7 @@
     \end{highlightsforbulletentries}
 \end{onecolentry}
 
+\vspace{0.2 cm}
 
 % ---------- Talks and Conferences ----------
 \section{Talks and Conferences}    
@@ -435,7 +436,7 @@
     \vspace{0.2 cm}
 
     \begin{onecolentry}
-        \textbf{Software:} Matlab, Mathematica, HEASOFT, XSPEC, and LaTe
+        \textbf{Software:} Matlab, Mathematica, HEASOFT, XSPEC, and LaTeX
     \end{onecolentry}
 
 
