--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -240,7 +240,7 @@
 % ----- Research Interests -----
 \section{Research Interests}
   \begin{onecolentry}
-    General relativity~(GR), Surrogate models of gravitational waves, Gravitational wave parameter estimation, Black hole merger phenomenology, point-particle black hole perturbation theory
+    General relativity~(GR), Surrogate modeling of gravitational waves, Gravitational wave parameter estimation, Black hole merger phenomenology, Point-particle black hole perturbation theory
   \end{onecolentry}
 
 % ---------- Education ----------
@@ -352,7 +352,7 @@
     \begin{highlights}
         \item Studied the impact of waveform calibration errors on gravitational wave parameter estimation
         \item Incorporated the waveform calibration error in the gravitational wave modeling in the context of \texttt{SEOBNRv4}, a class of effective-one-body models
-        \item Performed parameter estimation studies on simulated data to quantify the impact of waveform calibration errors
+        \item Performed parameter estimation studies using simulated data to quantify the impact of waveform calibration errors
     \end{highlights}
 \end{twocolentry}
 
@@ -368,11 +368,11 @@
 
 \vspace{0.2 cm}
 
-\begin{twocolentry}{July 2019 - January 2022}{\textbf{Timing and spectral analysic of X-ray pulsar: Centaurus X-3}}
+\begin{twocolentry}{July 2019 - January 2022}{\textbf{Timing and spectral analysis of X-ray pulsar: Centaurus X-3}}
     \begin{highlights}
         \item Studied the process of X-ray emission of HMXBs, particularly for Cen X-3
         \item Analyzed the phase resolved X-ray spectra of Cen X-3 using AstroSat data
-        \item Observed Quasi-periodic oscillations in the X-ray light curves of Cen X-3
+        \item Observed quasi-periodic oscillations in the X-ray light curves of Cen X-3
     \end{highlights}
 \end{twocolentry}
 
@@ -380,12 +380,12 @@
 \section{Teaching Experience}
 \begin{onecolentry}
     \begin{highlightsforbulletentries}
-      \item TA for PHY204, Elementary Physics II (Fall 2023), with Dr. Rob Coyne
+      \item TA for Elementary Physics II (Fall 2023), with Dr. Rob Coyne
       \begin{itemize}
         \item Assisted students with homework assignments and exam preparation by providing guidance and support to strengthen their understanding of the subject matter
       \end{itemize}
 
-      \item TA for AST 108 and AST118H (Fall 2021 - Spring 2022) with Prof. Douglas Gobeille
+      \item TA for AST 108 and AST 118H, introduction to astronomy (Fall 2021 - Spring 2022) with Prof. Douglas Gobeille
       \begin{itemize}
         \item Led various doubt-clearing sessions to enhance students' understanding of the course material
         \item Organized observation sessions to guide students in identifying celestial objects, including planets, stars, and constellations
