Updates to the research experience; GW software; minor updates

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -240,7 +240,7 @@
 % ----- Research Interests -----
 \section{Research Interests}
   \begin{onecolentry}
-    General relativity~(GR), Surrogate modeling of gravitational waves, Gravitational wave parameter estimation, Black hole merger phenomenology, Point-particle black hole perturbation theory
+    General relativity~(GR), Surrogate modeling of gravitational waves, Gravitational wave parameter estimation, Black hole merger phenomenology, Black hole perturbation theory
   \end{onecolentry}
 
 % ---------- Education ----------
@@ -286,7 +286,7 @@
 
     \item \textbf{Bhavesh Gandhi Memorial Prize} (2019-20), IIT Bombay -– Best M.Sc. thesis award for research on \textit{Phase-resolved analysis of Centaurus X-3}.
 
-    \item \textbf{CSIR NET} (June 2019) -– Achieved All India Rank \textbf{66}, qualifying for Junior Research Fellowship (JRF) in Physical Sciences.
+    \item \textbf{CSIR NET} (June 2019) -– Secured All India Rank \textbf{66}, qualifying for Junior Research Fellowship (JRF) in Physical Sciences.
   \end{highlightsforbulletentries}
 \end{onecolentry}
 
@@ -339,10 +339,11 @@
 \section{Research Experience}
 \begin{twocolentry}{September 2021 - Present}{\textbf{Surrogate modeling of gravitational waves}}
     \begin{highlights}
-        \item Studied point-particle black hole perturbation theory
-        \item Developing reduced-order surrogate models for gravitational waves from binary black holes
-        \item Combining numerical relativity and perturbation theory to model the gravitational waveforms of spinning black holes
-        \item Modeling the gravitational waveforms of intermediate mass ratio inspirals (IMRIs)
+        % \item Studied point-particle black hole perturbation theory
+        \item Developing reduced-order surrogate models for gravitational waves from binary black hole mergers
+        \item Integrating numerical relativity and perturbation theory to model gravitational waves from 
+              binary black holes~(BBHs) across a wide range of mass ratios and spin configurations
+        \item Modeling gravitational waveforms for intermediate-mass-ratio inspirals~(IMRIs)
     \end{highlights}
 \end{twocolentry}
 
@@ -350,9 +351,11 @@
 
 \begin{twocolentry}{July 2023 - Present}{\textbf{Systematics in gravitational wave modeling}}
     \begin{highlights}
-        \item Studied the impact of waveform calibration errors on gravitational wave parameter estimation
-        \item Incorporated the waveform calibration error in the gravitational wave modeling in the context of \texttt{SEOBNRv4}, a class of effective-one-body models
-        \item Performed parameter estimation studies using simulated data to quantify the impact of waveform calibration errors
+        \item Investigated the impact of waveform systematic on gravitational wave parameter estimation
+        \item Developing a method to mitigate systematic biases in parameter estimations by incorporating 
+        waveform uncertainties into gravitational wave models
+        \item Incorporated the waveform calibration error into the gravitational wave modeling within 
+        the \texttt{SEOBNRv4} framework
     \end{highlights}
 \end{twocolentry}
 
@@ -370,9 +373,8 @@
 
 \begin{twocolentry}{July 2019 - January 2022}{\textbf{Timing and spectral analysis of X-ray pulsar: Centaurus X-3}}
     \begin{highlights}
-        \item Studied the process of X-ray emission of HMXBs, particularly for Cen X-3
+        \item Studied the process of X-ray emission of High Mass X-ray Binaries~(HMXBs), particularly for Cen X-3
         \item Analyzed the phase resolved X-ray spectra of Cen X-3 using AstroSat data
-        \item Observed quasi-periodic oscillations in the X-ray light curves of Cen X-3
     \end{highlights}
 \end{twocolentry}
 
@@ -429,17 +431,27 @@
 % ---------- Programming Skills ----------
 \section{Programming Skills}
 
-    \begin{onecolentry}
-        \textbf{Programming:} Python(NumPy, SciPy, SymPy, AstroPy and Pandas), C, Fortran
-    \end{onecolentry}
+  \begin{onecolentry}
+    \textbf{Gravitational Wave Software Developer:} SEOBNRv4CE
+  \end{onecolentry} 
 
-    \vspace{0.2 cm}
+  \vspace{0.2 cm}
 
-    \begin{onecolentry}
-        \textbf{Software:} Matlab, Mathematica, HEASOFT, XSPEC, and LaTeX
-    \end{onecolentry}
+  \begin{onecolentry}
+      \textbf{Gravitational Wave Software:} GWtools, gwsurrogate
+  \end{onecolentry}
 
+  \vspace{0.2 cm}
 
+  \begin{onecolentry}
+      \textbf{Programming:} Python(NumPy, SciPy, SymPy, AstroPy and Pandas), C, Fortran
+  \end{onecolentry}
+
+  \vspace{0.2 cm}
+
+  \begin{onecolentry}
+      \textbf{Software:} Matlab, Mathematica, HEASOFT, XSPEC, and LaTeX
+  \end{onecolentry}
     
 
 \end{document}
