--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -280,7 +280,7 @@
 \section{Awards} 
 \begin{onecolentry}
   \begin{highlightsforbulletentries}
-    \item \textbf{Dean's Fellowship}, University of Rhode Island -– Recognized for outstanding academic achievement and scholarly potential.
+    \item \textbf{Dean's Fellowship}, University of Rhode Island -– Recognized for academic achievements and scholarly potential.
 
     \item \textbf{NASA Travel Grant} (\$1500) –- Funded travel to the 15th LISA Symposium, Dublin, Ireland (2024) for presenting research on gravitational wave modeling.
 
@@ -384,14 +384,14 @@
     \begin{highlightsforbulletentries}
       \item TA for Elementary Physics II (Fall 2023), with Dr. Rob Coyne
       \begin{itemize}
-        \item Assisted students with homework assignments and exam preparation by providing guidance and support to strengthen their understanding of the subject matter
+        \item Assisted students with homework assignments and exam preparation by providing guidance and support to strengthen their understanding of the subject matter.
       \end{itemize}
 
       \item TA for AST 108 and AST 118H, introduction to astronomy (Fall 2021 - Spring 2022) with Prof. Douglas Gobeille
       \begin{itemize}
-        \item Led various doubt-clearing sessions to enhance students' understanding of the course material
-        \item Organized observation sessions to guide students in identifying celestial objects, including planets, stars, and constellations
-        \item Conducted telescopic observations of solar phenomena, such as sunspots and solar flares
+        \item Conducted interactive sessions to clarify doubts and reinforce understanding of the course material.
+        \item Organized both telescope-assisted and unaided observation sessions to guide students in identifying celestial objects, 
+        including planets, stars, and constellations.
       \end{itemize}   
     \end{highlightsforbulletentries}
 \end{onecolentry}
