No last updated watermark

--- a/ritesh_cv.tex
+++ b/ritesh_cv.tex
@@ -192,7 +192,7 @@
 \newsavebox\ANDbox                              % Create a reusable empty box for the separator
 \sbox\ANDbox{}                                  % Define the box (currently empty; customizable later)
 
-\placelastupdatedtext                           % Add "Last updated" text to the document
+% \placelastupdatedtext                           % Add "Last updated" text to the document
 
 % ---- Header ----
 \begin{header}
