RSE Resume: Updated Yale experience

--- a/rse_resume.tex
+++ b/rse_resume.tex
@@ -175,15 +175,16 @@
 %-------------------------------------------
 
     \resumeSubheading
-      {Research Computing Facilitator trainee (NSF CAREERS)}{Summer 2022}
+      {Research Computing Facilitator trainee (NSF CAREERS)}{May 2022 - August 2022}
       {Yale University}{}
       \resumeItemListStart
-        \resumeItem{Built GloVe (Global Vectors) word embedding model on 5.8M Wikipedia 
-        articles to create word representation}
-        \resumeItem{Engineered efficient data pipeline processing large-scale text corpora: implemented XML-JSON conversion, batch processing
-        (10K articles/file), and text extraction using Gensim and Spacy}
-        \resumeItem{Achieved 80\% accuracy on semantic and syntactic word analogy tasks, 
-        validating model performance on standard benchmarks}
+        \resumeItem{Supported researchers in adopting ML and data processing workflows on 
+        MGHPCC Unity HPC infrastructure}
+        \resumeItem{Engineered NLP pipeline processing 5.8M Wikipedia articles: 
+        distributed batch processing (10K articles/batch), XML-JSON conversion, and 
+        text extraction using Gensim and Spacy}
+        \resumeItem{Trained GloVe word embedding model on processed corpus, achieving 
+        80\% accuracy on standard analogy benchmarks}
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
