Minor updates in resume

--- a/rse_resume.tex
+++ b/rse_resume.tex
@@ -184,7 +184,7 @@
         distributed batch processing (10K articles/batch), XML-JSON conversion, and 
         text extraction using Gensim and Spacy}
         \resumeItem{Trained GloVe word embedding model on processed corpus, achieving 
-        80\% accuracy on standard analogy benchmarks}
+        80\% accuracy on standard word analogy benchmarks}
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
